<plugin> update: PathFindingCore

--- a/Assets/Scripts_Modifier/Phantom.Modifier.asmdef
+++ b/Assets/Scripts_Modifier/Phantom.Modifier.asmdef
@@ -8,6 +8,7 @@
         "GUID:3e1313b9d6abf4d0394d17448e7e610f",
         "GUID:986c2a652687d674d87d43e6b2a2c7ad",
         "GUID:9ff28be865fd5419e971f47529488fd3",
+        "GUID:0f2d70405f3864f1ab00f836690458a0",
         "GUID:324caed91501a9c47a04ebfd87b68794",
         "GUID:7be4600869ec09d4ca9a37d1dbfbf1a2",
         "GUID:603c31fd40e1447f6af75b491911208c"
