--- a/Assets/Scripts_Runtime/Phantom.asmdef
+++ b/Assets/Scripts_Runtime/Phantom.asmdef
@@ -7,6 +7,7 @@
         "GUID:6ab90af8c2ba87e4bba6df4a563258ff",
         "GUID:3e1313b9d6abf4d0394d17448e7e610f",
         "GUID:986c2a652687d674d87d43e6b2a2c7ad",
+        "GUID:9ff28be865fd5419e971f47529488fd3",
         "GUID:204832dbd85e3473d9879601e51fc006",
         "GUID:eead81feccfbc42db851edfab9d4ffd3",
         "GUID:c7a1d41357ba98345ab1406e0233b825"
